--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
   <div class="candle-count-display">
-    HAPPY BIRTHDAY ATE DONNACAKES!
-  </div>
-
-  <div class="donna">
-    <img src="donut.png" alt="picture of donna" />
+    HAPPY BIRTHDAY ATE THEAAAA!
   </div>
 
   <div class="cake">
@@ -36,3 +32,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
