--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <div class="candle-count-display">
-    HAPPY BIRTHDAY ATE THEAAAA!
+    HAPPY BIRTHDAY ATE THEAAA!
   </div>
-
   <div class="cake">
     <div class="plate"></div>
     <div class="layer layer-bottom"></div>
@@ -32,4 +31,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
